# Inquesta

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  package-lock.json
.githooks/: commit-msg
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: hostinger.yml  production.yml  staging.yml
ci/: README.md  checker.py  pyproject.toml  requirements.txt
docs/: environment.md
docs/cloud/: hostinger.md
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/: app.tsx  main.tsx
frontend/src/graphql/: coursesOps.ts
frontend/src/lib/: apolloclient.ts
frontend/src/pages/: LoginPage.tsx  SignupPage.tsx  coursepage.tsx  courses.tsx  dashboardpage.tsx  googleloginpage.tsx  homepage.tsx  index.html  loginpage.tsx  notfoundpage.tsx  register.tsx  signuppage.tsx
frontend/src/scss/: courses.scss  homepage.scss  main.scss  register.scss
server/: drizzle.config.ts  package-lock.json  package.json  tsconfig.json
server/drizzle/: 0000_mean_stryfe.sql  0002_careful_mister_sinister.sql
server/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
server/src/: config.ts  server.ts
server/src/databases/: schema.ts
server/src/errors/: environment.ts
server/src/libraries/: builder.ts
server/src/resolvers/: course.ts  register.ts  user.ts
server/src/schemas/: auth.ts  course.ts  health.ts  register.ts  schema.ts
server/src/templates/: magic_link.html
server/src/types/: course.ts  fastify.ts  user.ts
(+15 files in other folders)
