[project]
name = "ci"
version = "0.0.0"
description = ""
authors = []
requires-python = ">=3.13"
dependencies = [
    "markdown-it-py (>=4.0.0,<5.0.0)",
    "linkify-it-py (>=2.1.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
